--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 está o andamento das obras do residencial Cristo Vive
               </h4>
               <p class="mb-0">
-                Aqui as informaçoes sempre estarão atualizadas!
+                Ultima atualização 16/06/2019
               </p>
             </div>
 
@@ -143,10 +143,10 @@
                         <div
                           class="text-xs font-weight-bold text-primary text-uppercase mb-1"
                         >
-                          Orçamento previsto para este mês de Maio
+                          O projeto prevê a construção de
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          $360,000
+                          1 MIL (UH) UNIDADES HABITACIONAIS
                         </div>
                       </div>
                       <div class="col-auto">
@@ -166,10 +166,10 @@
                         <div
                           class="text-xs font-weight-bold text-success text-uppercase mb-1"
                         >
-                          valor que já foi gasto este mês de Maio
+                          Até julho/2019
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          $215,000
+                          ESTARÃO CONCLUÍDAS 726 UH
                         </div>
                       </div>
                       <div class="col-auto">
@@ -187,7 +187,7 @@
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-info text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-warning text-uppercase mb-1"
                         >
                           Progresso das atividades previstas para este mês de
                           Maio
@@ -231,12 +231,12 @@
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-warning text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-danger text-uppercase mb-1"
                         >
-                          Atividades em atarso
+                         Após o mês de Julho
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                          2
+                            FICARÃO PENDENTES 274 UH, SENDO: 240 (ABRIGO 1) e 34 (ABRIGO 2)
                         </div>
                       </div>
                       <div class="col-auto">
@@ -254,70 +254,75 @@
                 <div class="card shadow mb-4">
                   <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">
-                      Pavimentação
+                      PROGRESSO DAS ATIVIDADES
                     </h6>
                   </div>
                   <div class="card-body">
                     <h4 class="small font-weight-bold">
-                      micro-drenagem <span class="float-right">20%</span>
+                        FUNDAÇÃO
+                        <span class="float-right">100%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar bg-danger"
+                        class="progress-bar bg-success"
                         role="progressbar"
-                        style="width: 20%"
+                        style="width: 100%"
                         aria-valuenow="20"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      asfalto <span class="float-right">40%</span>
+                        PAREDE DE CONCRETO ARMADO
+                        <span class="float-right"> 100%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar bg-warning"
+                      class="progress-bar bg-success"
                         role="progressbar"
-                        style="width: 40%"
+                        style="width: 100%"
                         aria-valuenow="40"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      redes de esgoto <span class="float-right">60%</span>
+                        COBERTURA (INCLUINDO TELHAMENTO) 
+                        <span class="float-right">100%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar"
+                      class="progress-bar bg-success"
                         role="progressbar"
-                        style="width: 60%"
+                        style="width: 100%"
                         aria-valuenow="60"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      redes de água <span class="float-right">80%</span>
+                        INSTALAÇÕES ELÉTRICAS
+                        <span class="float-right">72,60%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar bg-info"
+                      class="progress-bar bg-warning"
                         role="progressbar"
-                        style="width: 80%"
+                        style="width: 72.60%"
                         aria-valuenow="80"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      terraplanagem <span class="float-right">Completo!</span>
+                        INSTALÇAOES HIDRÁULICAS
+                        <span class="float-right">72,60%</span>
                     </h4>
                     <div class="progress">
                       <div
-                        class="progress-bar bg-success"
+                        class="progress-bar bg-warning"
                         role="progressbar"
-                        style="width: 100%"
+                        style="width: 72.60%"
                         aria-valuenow="100"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -327,39 +332,42 @@
 
                   <div class="card-body">
                     <h4 class="small font-weight-bold">
-                      micro-drenagem <span class="float-right">20%</span>
+                        INSTALAÇÕES SANITÁRIAS ( FOSSA+FILTRO +SUMIDOURO)
+                        <span class="float-right">72,60%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar bg-danger"
+                        class="progress-bar bg-warning"
                         role="progressbar"
-                        style="width: 20%"
+                        style="width: 72.60%"
                         aria-valuenow="20"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      asfalto <span class="float-right">40%</span>
+                        ESQUADRIAS (PORTAS E JANELAS)
+                        <span class="float-right">72,60%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
                         class="progress-bar bg-warning"
                         role="progressbar"
-                        style="width: 40%"
+                        style="width: 72.60%"
                         aria-valuenow="40"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
                     <h4 class="small font-weight-bold">
-                      redes de esgoto <span class="float-right">60%</span>
+                        REVESTIMENTO CERÂMICO ( ÁREAS DE BANHEIRO E COZINHA)
+                        <span class="float-right">72,60%</span>
                     </h4>
                     <div class="progress mb-4">
                       <div
-                        class="progress-bar"
+                        class="progress-bar bg-warning"
                         role="progressbar"
-                        style="width: 60%"
+                        style="width: 72.60%"
                         aria-valuenow="60"
                         aria-valuemin="0"
                         aria-valuemax="100"
