--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 INSTALÇAOES HIDRÁULICAS
                 <span class="float-right">72,60%</span>
               </h4>
-              <div class="progress">
+              <div class="progress mb-4">
                 <div
                   class="progress-bar bg-warning"
                   role="progressbar"
@@ -356,9 +356,9 @@
 
               <h4 class="small font-weight-bold">
                 PINTURA EXTERNA
-                <span class="float-right">72,60</span>
+                <span class="float-right">72,60%</span>
               </h4>
-              <div class="progress">
+              <div class="progress mb-4">
                 <div
                   class="progress-bar bg-warning"
                   role="progressbar"
@@ -369,7 +369,66 @@
                 ></div>
               </div>
 
-              
+              <h4 class="small font-weight-bold">
+                MACRODRENAGEM
+                <span class="float-right">72,60%</span>
+              </h4>
+              <div class="progress mb-4">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  style="width: 72.60%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+
+              <h4 class="small font-weight-bold">
+                MICRODRENAGEM
+
+                <span class="float-right">72,60%</span>
+              </h4>
+              <div class="progress mb-4">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  style="width: 72.60%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+
+              <h4 class="small font-weight-bold">
+                SISTEMA DE ABASTECIMENTO DE ÁGUA
+                <span class="float-right">90%</span>
+              </h4>
+              <div class="progress mb-4">
+                <div
+                  class="progress-bar bg-progress"
+                  role="progressbar"
+                  style="width: 90%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+
+              <h4 class="small font-weight-bold">
+                TERRAPLANAGEM
+                <span class="float-right">72,60%</span>
+              </h4>
+              <div class="progress mb-4">
+                <div
+                  class="progress-bar bg-warning"
+                  role="progressbar"
+                  style="width: 72.60%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </div>
           </div>
         </div>
@@ -379,7 +438,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="sticky-footer bg-white">
+    <footer class="sticky-footer bg-white padding-bottom-xl">
       <div class="container my-auto">
         <div class="copyright text-center my-auto">
           <span>Copyright &copy;</span>
