--- a/index.html
+++ b/index.html
@@ -65,25 +65,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                class="d-block w-100"
-                src="img/casaspopulares.jpg"
-                alt="First slide"
-              />
+              <img class="d-block w-100" src="img/p1.jpg" alt="First slide" />
             </div>
             <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="img/casas.jpg"
-                alt="Second slide"
-              />
+              <img class="d-block w-100" src="img/p2.jpg" alt="Second slide" />
             </div>
             <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="img/pavimentacao.jpg"
-                alt="Third slide"
-              />
+              <img class="d-block w-100" src="img/p3.jpg" alt="Third slide" />
             </div>
           </div>
           <a
@@ -125,7 +113,7 @@
         </p>
       </div>
 
-      <!-- Card -->
+      <!-- Cards -->
       <div class="row">
         <!-- Earnings (Monthly) Card Example -->
         <div class="col-xl-3 col-md-6 mb-4">
@@ -196,245 +184,259 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Progresso das atividades -->
-      <div class="row">
-        <div class="col-md-5">
-          <img
-            class="featurette-image img-fluid mx-auto"
-            data-src="holder.js/500x500/auto"
-            alt="500x500"
-            src="./img/mapa.PNG"
-            data-holder-rendered="true"
-          />
-        </div>
-
-        <div class="col-lg-6 mb-4">
-          <div class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">
-                PROGRESSO DAS ATIVIDADES
-              </h6>
-            </div>
-
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+          <div class="card border-left-success shadow h-100 py-2">
             <div class="card-body">
-              <h4 class="small font-weight-bold">
-                FUNDAÇÃO
-                <span class="float-right">100%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-success"
-                  role="progressbar"
-                  style="width: 100%"
-                  aria-valuenow="20"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                PAREDE DE CONCRETO ARMADO
-                <span class="float-right"> 100%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-success"
-                  role="progressbar"
-                  style="width: 100%"
-                  aria-valuenow="40"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                COBERTURA (INCLUINDO TELHAMENTO)
-                <span class="float-right">100%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-success"
-                  role="progressbar"
-                  style="width: 100%"
-                  aria-valuenow="60"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                INSTALAÇÕES ELÉTRICAS
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                INSTALÇAOES HIDRÁULICAS
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                INSTALAÇÕES SANITÁRIAS ( FOSSA+FILTRO +SUMIDOURO)
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="20"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                ESQUADRIAS (PORTAS E JANELAS)
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="40"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                REVESTIMENTO CERÂMICO ( ÁREAS DE BANHEIRO E COZINHA)
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="60"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                PINTURA INTENA
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="80"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                PINTURA EXTERNA
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                MACRODRENAGEM
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                MICRODRENAGEM
-
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                SISTEMA DE ABASTECIMENTO DE ÁGUA
-                <span class="float-right">90%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-progress"
-                  role="progressbar"
-                  style="width: 90%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
-              </div>
-
-              <h4 class="small font-weight-bold">
-                TERRAPLANAGEM
-                <span class="float-right">72,60%</span>
-              </h4>
-              <div class="progress mb-4">
-                <div
-                  class="progress-bar bg-warning"
-                  role="progressbar"
-                  style="width: 72.60%"
-                  aria-valuenow="100"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                ></div>
+              <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                  <div
+                    class="text-xs font-weight-bold text-success text-uppercase mb-1"
+                  >
+                    Até julho/2019
+                  </div>
+                  <div class="h5 mb-0 font-weight-bold text-gray-800">
+                    ESTARÃO CONCLUÍDAS 726 UH
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- Fim -->
       </div>
+
+      <!-- Progresso das atividades -->
+      <div class="card shadow">
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">
+            PROGRESSO DAS ATIVIDADES
+          </h6>
+        </div>
+
+        <div class="card-body">
+          <h4 class="small font-weight-bold">
+            FUNDAÇÃO
+            <span class="float-right">100%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-success"
+              role="progressbar"
+              style="width: 100%"
+              aria-valuenow="20"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            PAREDE DE CONCRETO ARMADO
+            <span class="float-right"> 100%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-success"
+              role="progressbar"
+              style="width: 100%"
+              aria-valuenow="40"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            COBERTURA (INCLUINDO TELHAMENTO)
+            <span class="float-right">100%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-success"
+              role="progressbar"
+              style="width: 100%"
+              aria-valuenow="60"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            INSTALAÇÕES ELÉTRICAS
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            INSTALÇAOES HIDRÁULICAS
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            INSTALAÇÕES SANITÁRIAS ( FOSSA+FILTRO +SUMIDOURO)
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="20"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            ESQUADRIAS (PORTAS E JANELAS)
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="40"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            REVESTIMENTO CERÂMICO ( ÁREAS DE BANHEIRO E COZINHA)
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="60"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            PINTURA INTENA
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            PINTURA EXTERNA
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            MACRODRENAGEM
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            MICRODRENAGEM
+
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            SISTEMA DE ABASTECIMENTO DE ÁGUA
+            <span class="float-right">90%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-progress"
+              role="progressbar"
+              style="width: 90%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+
+          <h4 class="small font-weight-bold">
+            TERRAPLANAGEM
+            <span class="float-right">72,60%</span>
+          </h4>
+          <div class="progress mb-4">
+            <div
+              class="progress-bar bg-warning"
+              role="progressbar"
+              style="width: 72.60%"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+        <!-- Fim card progresso -->
+      </div>
+
+      <div class="d-flex align-items-start"></div>
+      <div class="d-flex align-items-end">...</div>
+      <div class="d-flex align-items-center">...</div>
+      <div class="d-flex align-items-baseline">...</div>
+      <div class="d-flex align-items-stretch">...</div>
     </div>
 
     <!-- Footer -->
