--- a/index.html
+++ b/index.html
@@ -226,19 +226,17 @@
             <div class="text-center">
               <img
                 class="img-fluid px-3 px-sm-4 mt-3 mb-4"
-                style="width: 25rem;"
                 src="img/mapa.PNG"
-                alt=""
               />
             </div>
   
             <div class="text-center">
-              <h6>
-                O dados apresenatdos estão relacionados a perícia técnica
+              <h3>
+                Os dados apresentados estão relacionados a perícia técnica
                 designada pela Juiz Federal Hugo Frazão para o levantamento da
                 situação atual das obras do Cristo Vive e do Recenseamento das
                 unidades habitacionais já entregues ( 706 unidades )
-              </h6>
+              </h4>
             </div>
           </div>
         </div>
@@ -420,7 +418,6 @@
   
             <h4 class="small font-weight-bold">
               MICRODRENAGEM
-  
               <span class="float-right">72,60%</span>
             </h4>
             <div class="progress mb-4">
